--- a/client/angular-moviedb/package.json
+++ b/client/angular-moviedb/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "angular-token": "^7.0.1",
     "angular2-materialize": "^15.1.10",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
